--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ html, body {
 
 #startWrap {
   background: #e67e22;
+  background: url('banner.jpg');
+  background-size: cover;
   box-sizing: border-box;
   height: 100vh;
   padding-top: 120px;
@@ -75,36 +77,36 @@ h1 {
   position: relative;
 }
 
-#col1 {
+#productionWrap-col1 {
   position: absolute;
   left: 25px;
 }
 
-#col2 {
+#productionWrap-col2 {
   background: #353846;
   height: 500px;
   margin: auto;
   width: 900px;
 }
 
-#col3 {
+#productionWrap-col3 {
   position: absolute;
   right: 25px;
 }
 
-#col3 ul {
+#productionWrap-col3 ul {
   color: white;
   list-style: none;
 }
 
-#col3 ul li {
+#productionWrap-col3 ul li {
   background: #E67E22;
   margin: 15px 0;
   padding: 15px 40px;
   text-align: center;
 }
 
-#col3 ul li:hover {
+#productionWrap-col3 ul li:hover {
   background: #CC701E;
   cursor: pointer;
 }
