--- a/style.css
+++ b/style.css
@@ -115,9 +115,37 @@ h1 {
   color: white;
 }
 
+#consumptionWrap-inner {
+  margin: auto;
+  margin-bottom: 80px;
+  margin-top: 80px;
+  padding: 25px;
+  width: 1200px;
+}
+
+#consumptionCanvas {
+  background: #F5F5F5;
+  height: 400px;
+  width: 600px;
+}
+
+#consumptionWrap-col2 {
+  float: right;
+  width: 500px;
+}
+
+
 p {
-  margin: 0;
+  margin: 5px 0;
   font-size: 24px;
+}
+
+.slant {
+  font-style: italic;
+}
+
+h2 {
+  margin: 0;
 }
 
 .superlarge {
