--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 
 #startWrap {
   background: #e67e22;
-  background: url('banner.jpg');
+  background: url('banner2.jpg');
   background-size: cover;
   box-sizing: border-box;
   height: 100vh;
@@ -43,7 +43,7 @@ h1 {
 }
 
 #addressBox-link {
-  background: #66380F;
+  background: #E67E22;
   box-sizing: border-box;
   color: white;
   font-size: 24px;
@@ -57,7 +57,7 @@ h1 {
 }
 
 #addressBox-link:hover {
-  background: #733F11;
+  background: #CC701E;
   cursor: pointer;
 }
 
@@ -73,7 +73,7 @@ h1 {
 
 #productionWrap {
   background: #2B2E39;
-  padding: 25px;
+  padding: 75px;
   position: relative;
 }
 
@@ -119,7 +119,7 @@ h1 {
   margin: auto;
   margin-bottom: 80px;
   margin-top: 80px;
-  padding: 25px;
+  padding: 20px;
   width: 1200px;
 }
 
