--- a/style.css
+++ b/style.css
@@ -14,15 +14,23 @@ html, body {
   width: 100%;
 }
 
-h1 {
+h1, h3 {
   color: white;
   font-family: 'Biryani';
-  font-size: 64px;
   font-weight: 700;
   margin: 0;
   padding: 0;
-  padding-bottom: 40px;
   text-align: center;
+}
+
+h1 {
+  font-size: 64px;
+  padding-bottom: 20px;
+}
+
+h3 {
+  font-size: 36px;
+  padding-bottom: 40px;
 }
 
 #addressBox {
@@ -31,6 +39,10 @@ h1 {
   margin: auto;
   position: relative;
   width: 650px;
+}
+
+#addressBox-inner {
+  width: inherit;
 }
 
 #addressBox-input {
@@ -100,15 +112,25 @@ h1 {
 }
 
 #productionWrap-col3 ul li {
-  background: #E67E22;
+  /*background: #E67E22;*/
+  border: #E67E22 solid 2px;
+  font-size: 36px;
+  font-weight: 900;
   margin: 15px 0;
   padding: 15px 40px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 #productionWrap-col3 ul li:hover {
-  background: #CC701E;
+  background: #E67E22;
   cursor: pointer;
+}
+
+#productionWrap-col3 ul li.selected {
+  background: #B2621A;
+  border: #B2621A solid 2px;
+  cursor: not-allowed;
 }
 
 #productionWrap p {
@@ -124,7 +146,6 @@ h1 {
 }
 
 #consumptionCanvas {
-  background: #F5F5F5;
   height: 400px;
   width: 600px;
 }
@@ -133,6 +154,103 @@ h1 {
   float: right;
   width: 500px;
 }
+
+#investmentWrap {
+  background: #2B2E39;
+  padding: 75px;
+  position: relative;
+}
+
+#investmentWrap-inner {
+  margin: auto;
+  width: 1200px;
+}
+
+#investmentWrap .canvas {
+  background: #353846;
+  height: 600px;
+  margin: 20px 0;
+  width: inherit;
+}
+
+
+#environmentWrap {
+  background: url('forest.jpg');
+
+  color: white;
+
+  padding: 50px;
+}
+
+#environmentWrap-inner {
+  margin: auto;
+  width: 1400px;
+}
+
+#environmentWrap p {
+  color: #F5F5F5;
+  font-family: 'Biryani';
+  font-size: 64px;
+  font-weight: 600;
+}
+
+#environmentWrap p strong {
+  color: white;
+  font-weight: 900;
+}
+
+#furtherWrap-inner {
+  margin: auto;
+  padding: 40px 0;
+  width: 1200px;
+}
+
+#furtherWrap-inner .col1 {
+  box-sizing: border-box;
+  display: inline-block;
+  padding: 0 15px;
+  width: 390px;
+}
+
+#furtherWrap-inner .col2 {
+  box-sizing: border-box;
+  display: inline-block;
+  padding: 0 15px;
+  width: 390px;
+}
+
+#furtherWrap-inner .col3 {
+  box-sizing: border-box;
+  display: inline-block;
+  padding: 0 15px;
+  width: 390px;
+}
+
+
+#footerWrap {
+  background: #2B2E39;
+  color: white;
+  padding: 25px 0;
+}
+
+#footerWrap p {
+  font-size: 18px;
+  text-align: center;
+}
+
+#footerWrap p a {
+  color: #E67E22;
+  text-decoration: none;
+}
+
+#footerWrap p a:hover {
+  color: #CC701E;
+  text-decoration: underline;
+}
+
+
+
+
 
 
 p {
@@ -162,7 +280,9 @@ h2 {
   background: #EEE;
 }
 
-
+.dark {
+  color: white;
+}
 
 .label {
 
@@ -170,6 +290,29 @@ h2 {
 
 .bigNumber {
   font-family: 'Open Sans';
-  font-size: 128px;
+  font-size: 164px;
   font-weight: 100;
+}
+
+
+
+
+@media (max-width: 1250px) {
+  .bigNumber {
+    color: red;
+  }
+
+  .addressBox {
+    box-sizing: border-box;
+    padding: 0 25px;
+    width: 100%;
+  }
+
+  .addressBox-inner {
+
+  }
+
+  .page div {
+    display: block;
+  }
 }
