--- a/style.css
+++ b/style.css
@@ -226,6 +226,15 @@ h3 {
   width: 390px;
 }
 
+#furtherWrap-inner img {
+  margin: 40px 0;
+  width: 80%;
+}
+
+#furtherWrap-inner p {
+  font-size: 20px;
+}
+
 
 #footerWrap {
   background: #2B2E39;
@@ -296,10 +305,9 @@ h2 {
 
 
 
-
 @media (max-width: 1250px) {
   .bigNumber {
-    color: red;
+    color: red !important;
   }
 
   .addressBox {
@@ -315,23 +323,4 @@ h2 {
   .page div {
     display: block;
   }
-}
-
-#productionCanvas {
-  height: 70%;
-  width: 90%;
-  padding: 100px;
-  background-color: #2B2E39
-}
-
-.line {
- fill: none;
- stroke: orange;
- stroke-width: 5px;
-}
-
-.line2 {
- fill: none;
- stroke: black;
- stroke-width: 3px;
 }
